<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gcleris.android.grocerylist.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView android:id="@+id/header_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_line"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingLeft="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linear_layout" >

            <TextView android:id="@+id/column_header1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:paddingLeft="17dp"
                android:text="@string/heading_column1"
                android:textSize="15dp"
                android:textStyle="bold"
                />

            <TextView android:id="@+id/column_header2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/heading_column2"
                android:textSize="15dp"
                android:textStyle="bold"
                />

            <TextView android:id="@+id/column_header3"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/heading_column3"
                android:textSize="15dp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
